--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "vue": "^2.6.14",
     "vue2-google-maps": "^0.10.7"
   },
