--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,23 +20,14 @@ services:
     depends_on:
       - db
 
-  # frontend:
-  #   build:
-  #     context: ./ui
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 8080:80
-  #   volumes:
-  #     - ".:/ui"
-  #   command: >
-  # frontend:
-  #   build:
-  #     context: ./ui
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "8080:80"
-  #   volumes:
-  #     - "./ui:/app" 
+  frontend:
+    build:
+      context: ./ui
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80"
+    volumes:
+      - "./ui:/app" 
 
   db:
     image: postgres:13-alpine
