--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
+    "router": "^1.3.8",
+    "vue": "^2.7.14",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
