--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,8 @@
     "json-to-plain-text": "^1.1.2",
     "json2csv": "^6.0.0-alpha.2",
     "vue": "^2.6.14",
-    "vue2-google-maps": "^0.10.7"
+    "vue2-google-maps": "^0.10.7",
+    "test":"jest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
