--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -18,7 +18,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py wait_for_db &&  python manage.py test"
-
-      - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker-compose run --rm backend sh -c "python manage.py wait_for_db &&  python manage.py test"
