--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -4,18 +4,27 @@ name: checks
 on: [push]
 
 jobs:
-  test:
-    name: test
+  build:
     runs-on: ubuntu-20.04
     steps:
       - name: Login to Docker hub
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USER }}  
+          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}  
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: |
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Test
         run: docker-compose run --rm backend sh -c "python manage.py wait_for_db &&  python manage.py test"
+      
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker tag bc_wildfire-backend $DOCKER_USERNAME/image-registry:latest
+          docker push $DOCKER_USERNAME/image-registry:latest
