--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: "3.9"
 services:
-  backend:
+  web:
     build:
       context: .
       dockerfile: ./backend/Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - "./backend:/app"
+      - "backend:/app"
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -40,3 +40,4 @@ services:
 
 volumes:
   postgres-db-data:
+  backend:
