--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
       context: .
       dockerfile: ./backend/Dockerfile
     ports:
-      - "8000:8000"
+      - 8000:8000
     volumes:
-      - "./backend:/app"
+      - ./backend:/app
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -22,9 +22,9 @@ services:
       context: ./ui
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - 8080:80
     volumes:
-      - "./ui:/app"
+      - ./ui:/app
 
   db:
     image: postgres:13-alpine
