--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - backend_volume:/app
+      - ./backend:/app
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -35,4 +35,4 @@ services:
 
 volumes:
   postgres-db-data:
-  backend_volume:
+  # backend_volume:
