--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   web:
-    image: "bc_wildfire_web"
+    image: "bc_wildfire_web:${WEB_TAG}"
     build:
       context: .
       dockerfile: ./backend/Dockerfile
@@ -19,7 +19,7 @@ services:
       - db
 
   frontend:
-    image: "bc_wildfire_ui"
+    image: "bc_wildfire_ui:$TAG"
     build:
       context: ./ui
       dockerfile: Dockerfile
