--- a/.groovylintrc.json
+++ b/.groovylintrc.json
@@ -1,7 +1,19 @@
 {
     "extends": "recommended",
     "rules": {
+        "LineLength": {
+            "enabled": false
+        },
+        "NoDef": {
+            "enabled": false
+        },
+        "SpaceBeforeOpeningBrace": {
+            "enabled": false
+        },
         "UnnecessaryGString": {
+            "enabled": false
+        },
+        "VariableTypeRequired": {
             "enabled": false
         }
     }
