modifies docker-compose

--- a/.env.prod
+++ b/.env.prod
@@ -8,3 +8,7 @@ DB_HOST=db
 DB_USER=devuser
 DB_PASSWORD=devpassword
 DB_NAME=databasename
+
+#Allowed Host
+ALLOWED_IP=3.99.131.248
+SECRET_KEY=django-insecure-ropc*@04cbu4*59)0awml!=i@)5iue5ri!+43#b6#ahe-aotyb
