--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - 8082:8000
     volumes:
-      - backend_volume:/app
+      - web_volume:/app
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -26,7 +26,7 @@ services:
     ports:
       - 8081:80
     volumes:
-      - ./ui:/app
+      - ui_volume:/app
 
   db:
     image: postgres:13-alpine
@@ -37,4 +37,5 @@ services:
 
 volumes:
   postgres-db-data:
-  backend_volume:
+  ui_volume:
+  web_volume:
