--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 version: "3.3"
 services:
   web:
-    # image: "bc_wildfire_web:${TAG}"
+    image: "bc_wildfire_web:${TAG}"
     build:
       context: .
       dockerfile: ./backend/Dockerfile
     ports:
       - 8082:8000
     volumes:
-      - ./backend:/app
+      - web_volume:/app
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -19,12 +19,10 @@ services:
       - db
 
   frontend:
-    # image: "bc_wildfire_ui:${TAG}"
+    image: "bc_wildfire_ui:${TAG}"
     build:
       context: ./ui
       dockerfile: Dockerfile
-      # args:
-      #   - TAG=1.0.0
     ports:
       - 8081:80
     volumes:
