--- a/.env.prod
+++ b/.env.prod
@@ -8,3 +8,6 @@ DB_HOST=db
 DB_USER=devuser
 DB_PASSWORD=devpassword
 DB_NAME=databasename
+
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=cgolebu@gmail.com
