--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -10,13 +10,8 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py makemigrations --noinput &&
              python manage.py migrate --noinput &&
-             python manage.py createsuperuser --noinput --username $DJANGO_SUPERUSER_USERNAME --email $DJANGO_SUPERUSER_EMAIL
+             python manage.py createsuperuser --noinput --username $DJANGO_SUPERUSER_USERNAME --email $DJANGO_SUPERUSER_EMAIL &&
              python manage.py runserver 0.0.0.0:8000"
-
-          "python manage.py makemigrations  --noinput
-      && python manage.py migrate  --noinput
-      && python manage.py shell < createsuperuser.py
-      && python manage.py collectstatic  --noinput
 
     env_file:
       - ./.env.prod
