--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,7 @@ services:
       - web_volume:/app
     command: >
       sh -c "python manage.py wait_for_db &&
-             python manage.py makemigrations --noinput &&
-             python manage.py migrate --noinput &&
-             python manage.py createsuperuser --noinput --username $DJANGO_SUPERUSER_USERNAME --email $DJANGO_SUPERUSER_EMAIL &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     env_file:
       - ./.env.dev
